<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DME.ActivityEditar">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="305dp"
        android:layout_marginRight="305dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_cedula"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="295dp"
        android:layout_marginRight="295dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_nombre"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_nombre3"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_estrato"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Spinner
        android:id="@+id/SPN1"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="303dp"
        android:layout_marginRight="303dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_salario"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Texto_nivel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Spinner
        android:id="@+id/SPN2"
        android:layout_width="137dp"
        android:layout_height="33dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <Button
        android:id="@+id/idActualizar"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="63dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/baloo"
        android:text="@string/texto_actualizar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:id="@+id/idCancelar"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/baloo"
        android:text="@string/texto_eliminar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idCedula"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/baloo"
            android:inputType="number"
            android:hint="Ingrese su Identificacion"
            android:maxLength="12"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="312dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:hint="Ingrese su Nombre"
            android:maxLength="20"
            android:textColor="@color/colorPrimary"


            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idSalario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/baloo"
            android:hint="Ingrese su Salario"
            android:maxLength="12"
            android:inputType="number"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
