<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DME.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="302dp"
                android:layout_marginRight="302dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_cedula"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="111dp"
                android:layout_marginEnd="292dp"
                android:layout_marginRight="292dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_nombre"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="119dp"
                android:layout_marginLeft="119dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="125dp"
                android:layout_marginRight="125dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_nombre1"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_estrato"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <Spinner
                android:id="@+id/spnEstratos"
                android:layout_width="77dp"
                android:layout_height="31dp"
                android:layout_marginEnd="204dp"
                android:layout_marginRight="204dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="300dp"
                android:layout_marginRight="300dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_salario"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_nivel"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Spinner
                android:id="@+id/spnNiveles"
                android:layout_width="151dp"
                android:layout_height="33dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="105dp"
                android:layout_height="51dp"
                android:layout_marginStart="94dp"
                android:layout_marginLeft="94dp"
                android:layout_marginTop="70dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/baloo"
                android:text="@string/texto_guardar"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

            <Button
                android:id="@+id/btnListado"
                android:layout_width="107dp"
                android:layout_height="51dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="77dp"
                android:layout_marginRight="77dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/baloo"
                android:text="@string/Texto_listado"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="308dp"
                android:layout_height="67dp"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCedula"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/baloo"
                    android:hint="Ingrese Cedula"
                    android:maxLength="12"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="308dp"
                android:layout_height="67dp"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/baloo"
                    android:hint="Ingrese Nombre"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="303dp"
                android:layout_height="77dp"
                android:layout_marginStart="53dp"
                android:layout_marginLeft="53dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSalario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/baloo"
                    android:maxLength="12"
                    android:hint="Ingrese Salario"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="81dp"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:srcCompat="@android:drawable/ic_menu_save" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="81dp"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toEndOf="@+id/btnListado"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:srcCompat="?attr/actionModePasteDrawable" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
